iphone backgrounds blurry fix one

--- a/css/jawad css/custom.css
+++ b/css/jawad css/custom.css
@@ -692,7 +692,7 @@ cite {
 /**************************************** Here Starts the styling of over ons *******************************************/
 
 .row-image-one {
-   background-image: url("/Images/over-ons-pics/KARYO\ foto\ 123.png");
+   background-image: url("/Images/over-ons-pics/KARYO\ foto\ 123.png") no-repeat center;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
